cabal-version:       2.4
name:                regex-wrapper
version:             0.1.0.0
synopsis:            Types that can only be constructed if they match a regular expression
description:         See README.md
bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Luke Clifton
maintainer:          lukec@themk.net
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules: Text.Regex.Wrapper
  build-depends:
    , base ^>=4.12.0.0
    , regex-tdfa
    , hashable
    , string-conv
    , text
    , bytestring
    , aeson
    , containers
    , case-insensitive
  hs-source-dirs:      src
  default-language:    Haskell2010
